--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snake Game</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="snake.css" />
-    <script src="snake.js"></script>
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js"></script>
   </head>
 
   <body>
